Redesign UI and add network graph visualization
Revamps the UI with a modern glassmorphic style, updates the drop zone and status bar, and replaces the Sankey diagram with a new D3 force-directed network graph for visualizing PCAP flows. Adds src/visualizer/network_graph.js for the new visualization, updates event handling and status feedback in main.js, and improves overall user experience and accessibility.

--- a/index.html
+++ b/index.html
@@ -1,35 +1,50 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EtherPrism | PCAP Visualizer</title>
-    <meta name="description" content="High-performance, browser-based PCAP visualizer using D3.js">
-  </head>
-  <body>
-    <div id="app">
-      <header>
-        <div class="logo">💎 EtherPrism</div>
-        <div class="status-bar" id="status-bar">Ready</div>
-      </header>
-      
-      <main>
-        <div id="drop-zone" class="drop-zone">
-          <div class="content">
-            <span class="icon">📂</span>
-            <p>Drag & Drop a <strong>.pcap</strong> file here</p>
-            <p class="sub">or click to browse</p>
-          </div>
-          <input type="file" id="file-input" accept=".pcap,.cap" hidden />
-        </div>
 
-        <div id="visualization-container" class="hidden">
-           <!-- D3 Sankey will be rendered here -->
-           <svg id="sankey-svg"></svg>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EtherPrism | PCAP Visualizer</title>
+  <meta name="description" content="High-performance, browser-based PCAP visualizer using D3.js">
+</head>
+
+<body>
+  <div id="app">
+    <header>
+      <div class="logo">
+        <span class="logo-icon">💎</span>
+        <span>EtherPrism</span>
+      </div>
+      <div class="status-bar" id="status-bar">
+        <div class="status-dot" id="status-dot"></div>
+        <span id="status-text">Ready</span>
+      </div>
+    </header>
+
+    <main>
+      <div id="drop-zone" class="drop-zone">
+        <div class="icon-container">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+            <polyline points="17 8 12 3 7 8" />
+            <line x1="12" y1="3" x2="12" y2="15" />
+          </svg>
         </div>
-      </main>
-    </div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+        <h2>Analyze Network Traffic</h2>
+        <p>Drag & Drop your <strong>.pcap</strong> file here</p>
+        <button class="btn-browse">Browse Files</button>
+        <input type="file" id="file-input" accept=".pcap,.cap" hidden />
+      </div>
+
+      <div id="visualization-container" class="hidden">
+        <!-- D3 Sankey will be rendered here -->
+        <svg id="sankey-svg"></svg>
+      </div>
+    </main>
+  </div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
