--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <div id="app">
     <header>
       <div class="logo">
-        <span class="logo-icon">💎</span>
-        <span>EtherPrism</span>
-        <span class="version-tag">v0.5.0-alpha</span>
+        <span class="logo-icon">⬢</span>
+        <h1>EtherPrism <span class="version-tag">v0.6.0-alpha</span></h1>
       </div>
       <div class="status-bar" id="status-bar">
         <div class="status-dot" id="status-dot"></div>
@@ -73,6 +72,7 @@
       <div id="visualization-container" class="hidden">
         <svg id="sankey-svg"></svg>
       </div>
+      <div id="dashboard-container" class="hidden"></div> <!-- Dashboard Overlay -->
 
       <!-- Timeline (Bottom Overlay) -->
       <div id="timeline-container" class="timeline-container hidden">
